plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
}

repositories {
    maven { url "https://repo.osgeo.org/repository/release/" }
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    options.release = 21
}

dependencies {

}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifactId = 'mago-common'
        }
    }
    repositories {
        maven {
            name = "github"
            url = uri("https://maven.pkg.github.com/gaia3d/mago-3d-tiler")
            credentials {
                username = findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
                password = findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
            }
        }
    }
}

javadoc {
    enabled = false
    options.addStringOption("locale", "en_US")
    options.addStringOption("encoding", "UTF-8")
    options.addStringOption("charset", "UTF-8")
    options.addStringOption("docencoding", "UTF-8")
}

test {
    useJUnitPlatform {
        includeTags 'default'
    }
}
